--- a/euanon/euanon/euanon/euanon.csproj
+++ b/euanon/euanon/euanon/euanon.csproj
@@ -38,6 +38,7 @@
     <Compile Include="Model\Util.cs" />
     <Compile Include="ViewModel\CategoriaViewModel.cs" />
     <Compile Include="ViewModel\ConfiguracaoViewModel.cs" />
+    <Compile Include="ViewModel\DicasViewModel.cs" />
     <Compile Include="View\AboutPage.xaml.cs">
       <DependentUpon>AboutPage.xaml</DependentUpon>
     </Compile>
@@ -58,6 +59,9 @@
       <DependentUpon>DetailPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Helpers\Settings.cs" />
+    <Compile Include="View\DicasPage.xaml.cs">
+      <DependentUpon>DicasPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\LoginFace.xaml.cs">
       <DependentUpon>LoginFace.xaml</DependentUpon>
     </Compile>
@@ -195,6 +199,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="View\ConfiguracaoPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="View\DicasPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
